established connection between teh front end and the back end.

--- a/searchEngine/client/index.html
+++ b/searchEngine/client/index.html
@@ -3,10 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>client</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"  crossorigin="anonymous">
+    <title>Search</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-lg-12">
+
+          <div id="app"></div>
+      </div>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
